--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.10.2",
 	"appid": "wx42542bd2f06afff9",
-	"projectname": "%E9%9D%92%E6%98%A5%E5%9C%A8%E7%BA%BF%E8%AF%B7%E5%81%87%E6%9D%A1",
+	"projectname": "youtholLeave",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
